# judo_scout

./: README.md  analise_judo.db  atletas.py  cadastro.py  components.py  database.py  home.py  login.py  main.py  pyproject.toml
