[tool.poetry]
name = "analise-judo"
version = "0.1.0"
description = ""
authors = ["gabrielalmeidahouer <gabrielalmeida@houer.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.24.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
